test/sum-map-iterator-wrong.stderr
Error: Line 6, col 13:
  5 |     let l = it()
> 6 |     let k = l.get(0) and let v = l.get(1)
                  ^~~~~
  7 |     if l == null { return tot }

Invalid property

Traceback (most recent call last)
  line 12
    sum({"a": 10, "b": 30, "c": 50, "d": 5, "e": 5}), at top level