test/sum-map-iterator-wrong.ursa
let sum = fn(m: Map<String, Int>): Int {
  var tot = 0
  let it = m.iter()
  loop {
    let l = it()
    let k = l.get(0) and let v = l.get(1)
    if l == null { return tot }
    print(k)
    tot := tot + v
  }
}
sum({"a": 10, "b": 30, "c": 50, "d": 5, "e": 5})
